# computer_graphics

./: CMakeLists.txt
exe/: ColorModelsApp
include/: ColorConverter.h
lab1/exe/: ColorModelsApp
lab1/include/: ColorConverter.h
lab2/: CMakeLists.txt  main.cpp  main_window.h  mainwindow.cpp
lab2/exe/: ImageProcessingApp
lab2/image/: image.rle  parrot.rle
lab3/: CMakeLists.txt  main.cpp
lab3/exe/: Lab3
src/: ColorConverter.cpp  main.cpp
